@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2011/05/14 23:10:48 abs Exp $
-
-SHA1 (Ocsinventory-Agent-1.1.2.tar.gz) = 4dfad86e86adb51ebfdb6b6809bd7597a5fbde9e
-RMD160 (Ocsinventory-Agent-1.1.2.tar.gz) = 5ad79fc5c041f45c9f3037a44eea718c02dfb330
-Size (Ocsinventory-Agent-1.1.2.tar.gz) = 1404745 bytes
